--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "firebase": "^8.2.4",
     "nuxt": "^2.14.6",
     "vee-validate": "^3.4.5",
-    "vue-cryptojs": "^2.1.5"
+    "vue-cryptojs": "^2.1.5",
+    "@nuxtjs/vuetify": "^1.11.2"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.11.2"
+    
   }
 }
